# Componentization

./: README.md  build.gradle  gradle.properties  settings.gradle
base/: CMakeLists.txt  build.gradle
base/src/androidTest/java/com/hechuangwu/baselibrary/: ExampleInstrumentedTest.java
base/src/main/: AndroidManifest.xml
base/src/main/cpp/compress/: compress.c
base/src/main/java/com/hechuangwu/baselibrary/base/: BaseActivity.java  BaseApplication.java  BaseApplicationManager.java  BaseFragment.java
base/src/main/java/com/hechuangwu/baselibrary/bean/: MessageEvent.java
base/src/main/java/com/hechuangwu/baselibrary/helper/: ARouterConfig.java  Config.java
base/src/main/java/com/hechuangwu/baselibrary/helper/ioc/: BindView.java  ButterKnife.java  OnCheckNet.java  OnClick.java  ViewFinder.java
base/src/main/java/com/hechuangwu/baselibrary/helper/jpeg/: ImageCompress.java
base/src/main/java/com/hechuangwu/baselibrary/helper/manager/: ActivitiesManager.java  ExceptionCrashManager.java
base/src/main/java/com/hechuangwu/baselibrary/helper/manager/andfix/: AndFixPatchManager.java  AndFixService.java
base/src/main/java/com/hechuangwu/baselibrary/helper/manager/tinker/: TinkerLike.java  TinkerManager.java  TinkerPatchListener.java  TinkerResultService.java
base/src/main/java/com/hechuangwu/baselibrary/helper/plugin/: PluginInfo.java  PluginManager.java
base/src/main/java/com/hechuangwu/baselibrary/helper/util/: Utils.java
base/src/main/res/layout/: activity_base.xml  activity_main.xml
base/src/test/java/com/hechuangwu/baselibrary/: ExampleUnitTest.java
(+25 files in other folders)
